1998-05-27  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* protocol.el (parse-state, module): New structures.
	(protocol): Add typedef-list.
	(skip-whitespace-backward, make-global, immediate-tag-prossed,
	is-doc-type, set-buf, append-buf, handle-global-doc-post,
	handle-global, skip-c-comment, check-common-tags,
	check-protocol-tags, handle-protocol-tag-change,
	handle-common-tag-change, handle-protocol-tag, handle-common-tag,
	same-tag-p, end-tag-p, process-header-file, load-module): New
	functions.
	(*protocol-regexp*): New variable.
	(find-protocol): Use *protocol-regexp*.
	(update-extern): Take parse-state as an argument.
	(load-protocol): Use process-header-file (most of contents moved
	to this new functions).
	(load-protocols): Reset to beginning of buffer.
	(load-all-modules): Renamed from load-protocols-for-all-modules.
	Call load-module.
	(load-and-process-modules): Renamed from
	load-and-process-protocols.  Call load-all-modules.

	* Makefile.rules: Use addprefix, not addsuffixes for output
	format rules.

1998-05-27  Alex Lancaster  <alex@santafe.edu>

	* swarmbook.dsl (html): for REFERENCEs, made REVHISTORY be a
	'verso' element and make PARTINTRO appear on 'recto' page - puts
	revhistory after partintro 

	* swarmbook.dsl (print): as per html, effect is to put ABSTRACT
	and REVHISTORY on separate page after PARTINTRO

1998-05-26  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* history.el (process-changelog): Use insert-text instead of insert
	for REVREMARK data.

	* common.el (insert-text): Moved from protocol.el.

	* protocol.el (named-object): New structure.
	(*doc-types*): New types :global-doc, :global-begin, :global-end,
	:global-break.
	(sgml-refsect1-named-object-list, sgml-refsect1-text-list): New
	functions.
	(sgml-refsect1-macro-list, sgml-refsect1-global-list): New
	functions
	(use sgml-refsect1-named-object-list).
	(sgml-refsect1-description-list): Use sgml-refsect1-text-list.
	(load-protocol): Parse //# (traditional) and //G (traditional and